[gd_scene load_steps=16 format=3 uid="uid://cx6h3tck10s1g"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/StyleEditor/style_editor.gd" id="1_gy14f"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_g4mnt"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/StyleEditor/style_layer_editor.gd" id="3_iih7c"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/StyleEditor/Components/style_layer_tree.gd" id="4_kpoqn"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/StyleEditor/Components/style_browser_window.gd" id="5_qbwx0"]
[ext_resource type="PackedScene" uid="uid://cs381i3h7sveq" path="res://addons/dialogic/Modules/StyleEditor/Components/style_browser.tscn" id="6_p6lia"]

[sub_resource type="Image" id="Image_66hwb"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_rfmv2"]
image = SubResource("Image_66hwb")

[sub_resource type="Image" id="Image_hsqp4"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_xtj53"]
image = SubResource("Image_hsqp4")

[sub_resource type="Theme" id="Theme_l6tyr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tixgs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nh8y"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Image" id="Image_eolug"]
data = {
"data": PackedByteArray(0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255),
"format": "RGBA8",
"height": 2,
"mipmaps": false,
"width": 2
}

[sub_resource type="ImageTexture" id="ImageTexture_yr3tj"]
image = SubResource("Image_eolug")

[node name="StyleEditor" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_gy14f")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.2
theme_type_variation = &"DialogicPanelA"

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="StyleListTitle" type="Label" parent="Panel/VBox/Title"]
layout_mode = 2
theme_type_variation = &"DialogicSubTitle"
text = "Styles"

[node name="HintTooltip" parent="Panel/VBox/Title" instance=ExtResource("2_g4mnt")]
layout_mode = 2
tooltip_text = "Each style consist of a list of layers and settings for each layer. 
A style can inherit from another style (inherited styles can only overwrite settings of their layers).
When one style is selected as default dialogic will use that style when calling Dialogic.start() otherwise a fallback is used.
You can change the style with the Change Style event, by setting a style on a character or by calling 
Dialogic.Styles.load_style(\"Style Name\") before calling Dialogic.start()."
texture = SubResource("ImageTexture_rfmv2")
hint_text = "Each style consist of a list of layers and settings for each layer. 
A style can inherit from another style (inherited styles can only overwrite settings of their layers).
When one style is selected as default dialogic will use that style when calling Dialogic.start() otherwise a fallback is used.
You can change the style with the Change Style event, by setting a style on a character or by calling 
Dialogic.Styles.load_style(\"Style Name\") before calling Dialogic.start()."

[node name="StyleButtons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 2

[node name="AddButton" type="MenuButton" parent="Panel/VBox/StyleButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add layout-style"
icon = SubResource("ImageTexture_rfmv2")
switch_on_hover = true
item_count = 5
popup/item_0/text = "ADD STYLE"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = ""
popup/item_1/id = 0
popup/item_1/separator = true
popup/item_2/text = "Premade Style"
popup/item_2/id = 0
popup/item_3/text = "Inherited Style"
popup/item_3/id = 1
popup/item_4/text = "Custom Style"
popup/item_4/id = 2

[node name="DuplicateButton" type="Button" parent="Panel/VBox/StyleButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Duplicate style"
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="RemoveButton" type="Button" parent="Panel/VBox/StyleButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Remove style from list"
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="MakeDefaultButton" type="Button" parent="Panel/VBox/StyleButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Make Default"
toggle_mode = true
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="StyleList" type="ItemList" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
item_count = 1
item_0/text = "Style"
item_0/icon = SubResource("ImageTexture_xtj53")

[node name="StyleView" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="StyleView"]
layout_mode = 2
theme = SubResource("Theme_l6tyr")
theme_override_constants/separation = 0

[node name="LayoutStyleName" type="LineEdit" parent="StyleView/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicTitle"
theme_override_styles/normal = SubResource("StyleBoxEmpty_tixgs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tixgs")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_tixgs")
text = "Style"
expand_to_text_length = true

[node name="EditNameButton" type="Button" parent="StyleView/HBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Edit Name"
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="InheritanceButton" type="MenuButton" parent="StyleView/HBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Inherits VN Style"
icon = SubResource("ImageTexture_rfmv2")
icon_alignment = 2
item_count = 1
popup/item_0/text = "Clear Inheritance"
popup/item_0/id = 0

[node name="TestStyleButton" type="Button" parent="StyleView/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Play current timeline with this style"
text = "Test Style"
icon = SubResource("ImageTexture_rfmv2")

[node name="PanelContainer" type="PanelContainer" parent="StyleView"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DialogicPanelB"

[node name="StyleEditor" type="HSplitContainer" parent="StyleView/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_iih7c")

[node name="LayerPanel" type="PanelContainer" parent="StyleView/PanelContainer/StyleEditor"]
layout_mode = 2
theme_type_variation = &"DialogicPanelA"

[node name="VBox" type="VBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerPanel"]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox"]
layout_mode = 2

[node name="LayerListTitle" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/Title"]
layout_mode = 2
theme_type_variation = &"DialogicSubTitle"
text = "Layers"

[node name="HintTooltip" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/Title" instance=ExtResource("2_g4mnt")]
layout_mode = 2
tooltip_text = "Each layer is a scene and settings that will be applied to that scene.
A layer can either be a premade scene or a scene you've made yourself."
texture = SubResource("ImageTexture_rfmv2")
hint_text = "Each layer is a scene and settings that will be applied to that scene.
A layer can either be a premade scene or a scene you've made yourself."

[node name="LayerButtons" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox"]
layout_mode = 2
alignment = 2

[node name="AddLayerButton" type="MenuButton" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Add Layer"
icon = SubResource("ImageTexture_rfmv2")
switch_on_hover = true
item_count = 4
popup/item_0/text = "ADD LAYER"
popup/item_0/id = 1
popup/item_0/disabled = true
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "Premade Layer"
popup/item_2/id = 1
popup/item_3/text = "Custom Layer"
popup/item_3/id = 0

[node name="ReplaceLayerButton" type="MenuButton" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Replace Layer"
icon = SubResource("ImageTexture_rfmv2")
switch_on_hover = true
item_count = 4
popup/item_0/text = "REPLACE LAYER"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = ""
popup/item_1/id = 0
popup/item_1/separator = true
popup/item_2/text = "Premade Layer"
popup/item_2/id = 0
popup/item_3/text = "Custom Layer"
popup/item_3/id = 1

[node name="MakeCustomButton" type="MenuButton" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Make Custom"
icon = SubResource("ImageTexture_rfmv2")
switch_on_hover = true
item_count = 4
popup/item_0/text = "MAKE CUSTOM"
popup/item_0/id = 3
popup/item_0/disabled = true
popup/item_1/text = ""
popup/item_1/id = 0
popup/item_1/separator = true
popup/item_2/text = "Current Layer"
popup/item_2/id = 0
popup/item_3/text = "Full Layout"
popup/item_3/id = 2

[node name="DeleteLayerButton" type="Button" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Delete Layer (no undo!)"
disabled = true
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="LayerTree" type="Tree" parent="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
hide_folding = true
enable_recursive_folding = false
drop_mode_flags = 2
script = ExtResource("4_kpoqn")

[node name="LayerSettings" type="VBoxContainer" parent="StyleView/PanelContainer/StyleEditor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LayerInfoHeader" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings"]
layout_mode = 2

[node name="LayerName" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoHeader"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"DialogicTitle"
text = "Default Layout Base"

[node name="ExpandLayerInfo" type="Button" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoHeader"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_rfmv2")
flat = true

[node name="LayerInfoBody" type="VBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox"]
show_behind_parent = true
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0nh8y")

[node name="SmallLayerPreview" type="TextureRect" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Panel"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("ImageTexture_yr3tj")
expand_mode = 3
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SmallLayerScene" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "res://addons/dialogic/Modules/LayoutStuff/Base_Default/default_layout_base.tscn"
text = "default_layout_base.tscn"

[node name="SmallLayerAuthor" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.603922)
layout_mode = 2
theme_type_variation = &"DialogicHintText"
text = "Dialogic"

[node name="Description" type="HBoxContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info/Description"]
layout_mode = 2
theme_type_variation = &"DialogicHintText2"
text = "Info:"

[node name="SmallLayerDescription" type="Label" parent="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoBody/HBox/Info/Description"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"DialogicHintText2"
text = "A very simple base for layouts."
autowrap_mode = 3
text_overrun_behavior = 4

[node name="LayerSettingsTabs" type="TabContainer" parent="StyleView/PanelContainer/StyleEditor/LayerSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="Control" parent="StyleView"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NoStyleView" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NoStyleView"]
layout_mode = 2
text = "You have not setup any style. Dialogic will use a fallback style."
horizontal_alignment = 1
autowrap_mode = 3

[node name="StartStylingButton" type="Button" parent="NoStyleView"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Make a custom style from a variation of the fallback."
text = "Make my own!"

[node name="StyleBrowserWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "Style Browser"
position = Vector2i(0, 36)
size = Vector2i(500, 400)
visible = false
wrap_controls = true
transient = true
popup_window = true
script = ExtResource("5_qbwx0")

[node name="StyleBrowser" parent="StyleBrowserWindow" instance=ExtResource("6_p6lia")]
unique_name_in_owner = true

[connection signal="pressed" from="Panel/VBox/StyleButtons/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StyleButtons/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Panel/VBox/StyleButtons/MakeDefaultButton" to="." method="_on_make_default_button_pressed"]
[connection signal="focus_exited" from="StyleView/HBox/LayoutStyleName" to="." method="_on_layout_style_name_focus_exited"]
[connection signal="text_submitted" from="StyleView/HBox/LayoutStyleName" to="." method="_on_layout_style_name_text_submitted"]
[connection signal="pressed" from="StyleView/HBox/EditNameButton" to="." method="_on_edit_name_button_pressed"]
[connection signal="pressed" from="StyleView/HBox/TestStyleButton" to="." method="_on_test_style_button_pressed"]
[connection signal="about_to_popup" from="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons/MakeCustomButton" to="StyleView/PanelContainer/StyleEditor" method="_on_make_custom_button_about_to_popup"]
[connection signal="pressed" from="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerButtons/DeleteLayerButton" to="StyleView/PanelContainer/StyleEditor" method="_on_delete_layer_button_pressed"]
[connection signal="button_clicked" from="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerTree" to="StyleView/PanelContainer/StyleEditor" method="_on_layer_tree_button_clicked"]
[connection signal="layer_moved" from="StyleView/PanelContainer/StyleEditor/LayerPanel/VBox/LayerTree" to="StyleView/PanelContainer/StyleEditor" method="_on_layer_tree_layer_moved"]
[connection signal="pressed" from="StyleView/PanelContainer/StyleEditor/LayerSettings/LayerInfoHeader/ExpandLayerInfo" to="StyleView/PanelContainer/StyleEditor" method="_on_expand_layer_info_pressed"]
[connection signal="pressed" from="NoStyleView/StartStylingButton" to="." method="_on_start_styling_button_pressed"]
[connection signal="close_requested" from="StyleBrowserWindow" to="StyleBrowserWindow" method="_on_close_requested"]
[connection signal="activate_part" from="StyleBrowserWindow/StyleBrowser" to="StyleBrowserWindow" method="_on_style_browser_activate_part"]
